# aws-rag-query-engine

./: main.py  pyproject.toml
image/: create_db.py
image/src/: app_api_handler.py
image/src/data/chroma/: chroma.sqlite3
image/src/rag_app/: get_chroma_db.py  query_rag.py
