[project]
name = "aws-rag-query-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.34.117",
    "chromadb==0.5.0",
    "fastapi==0.111.0",
    "langchain==0.2.1",
    "langchain-aws==0.1.6",
    "langchain-community==0.2.1",
    "mangum==0.17.0",
    "pypdf==4.2.0",
    "uvicorn==0.30.0",
]
